# MostWantedTimeTrialGhosts

./: CMakeLists.txt  README.md  challengeseries.h  compression.h  compression_test.h  d3dhook.h  gamemenu.h  main.cpp  timetrials.h  util.h  verification.h
CwoeeGhosts/Career/: 15.1.1_lap2_1.mwrep2  15.1.1_lap2_2.mwrep2  15.2.1_1.mwrep2  15.2.1_2.mwrep2  15.2.1_3.mwrep2  15.3.1_lap3_1.mwrep2  15.3.1_lap3_2.mwrep2  15.3.1_lap3_3.mwrep2  16.2.3_3.mwrep2
CwoeeGhosts/Challenges/: 1.1.1_gti_1.mwrep  1.1.1_gti_1.mwrep2  1.1.1_gti_2.mwrep  1.1.1_gti_2.mwrep2  1.1.1_gti_3.mwrep  1.1.1_gti_3.mwrep2  1.1.1_gti_4.mwrep2  1.1.1_gti_5.mwrep2  1.2.1_carreragt_1.mwrep  1.2.1_carreragt_1.mwrep2  1.2.1_carreragt_2.mwrep  1.2.1_carreragt_2.mwrep2  1.2.3_bmwm3gtre46_1.mwrep  1.2.3_bmwm3gtre46_1.mwrep2  1.2.3_bmwm3gtre46_2.mwrep  1.2.3_bmwm3gtre46_2.mwrep2  1.2.3_bmwm3gtre46_3.mwrep  1.2.3_bmwm3gtre46_3.mwrep2  1.2.3_bmwm3gtre46_4.mwrep  1.2.3_bmwm3gtre46_4.mwrep2  1.2.3_bmwm3gtre46_5.mwrep2  1.2.3_bmwm3gtre46_6.mwrep2  1.2.4_rx7_1.mwrep  1.2.4_rx7_1.mwrep2  1.2.4_rx7_2.mwrep  1.2.4_rx7_2.mwrep2  1.2.4_rx7_3.mwrep  1.2.4_rx7_3.mwrep2  1.5.2_fordgt_1.mwrep  1.5.2_fordgt_1.mwrep2  1.5.2_fordgt_2.mwrep  1.5.2_fordgt_2.mwrep2  1.5.2_fordgt_3.mwrep  1.5.2_fordgt_3.mwrep2  1.5.2_fordgt_4.mwrep  1.5.2_fordgt_4.mwrep2  1.5.2_fordgt_5.mwrep2  1.8.1_bmwm3gtre46_1.mwrep2  1.8.1_bmwm3gtre46_2.mwrep2  1.8.1_bmwm3gtre46_3.mwrep2  (+209 more)
CwoeeGhosts/Challenges/Dragnor/: 12.7.3_cobaltss_pb.mwrep2  15.1.1_997s_lap2_pb.mwrep  15.1.1_997s_lap2_pb.mwrep2  16.1.1_gto_lap2_pb.mwrep  16.1.1_gto_lap2_pb.mwrep2
CwoeeGhosts/Challenges/Dragnorr/: 12.7.3_cobaltss_pb.mwrep  15.1.1_997s_lap2_pb.mwrep
CwoeeGhosts/Challenges/KuruHS/: 1.1.1_gti_pb.mwrep  1.1.1_gti_pb.mwrep2  1.2.1_carreragt_pb.mwrep  1.2.1_carreragt_pb.mwrep2  1.2.3_bmwm3gtre46_pb.mwrep  1.2.3_bmwm3gtre46_pb.mwrep2  1.2.4_rx7_pb.mwrep  1.2.4_rx7_pb.mwrep2  1.5.2_fordgt_pb.mwrep  1.5.2_fordgt_pb.mwrep2  1.8.1_bmwm3gtre46_pb.mwrep  1.8.1_bmwm3gtre46_pb.mwrep2  10.2.1_caymans_pb.mwrep  10.2.1_caymans_pb.mwrep2  10.3.2_supra_lap3_pb.mwrep  10.3.2_supra_lap3_pb.mwrep2  11.1.2_eclipsegt_lap2_pb.mwrep  11.1.2_eclipsegt_lap2_pb.mwrep2  11.7.1_gti_pb.mwrep  11.7.1_gti_pb.mwrep2  12.2.1_rx8_pb.mwrep  12.2.1_rx8_pb.mwrep2  12.7.3_cobaltss_pb.mwrep  12.7.3_cobaltss_pb.mwrep2  13.2.3_supra_pb.mwrep  13.2.3_supra_pb.mwrep2  13.5.1_elise_pb.mwrep  13.5.1_elise_pb.mwrep2  14.1.1_rx8_lap3_pb.mwrep  14.1.1_rx8_lap3_pb.mwrep2  14.2.4_is300_pb.mwrep  14.2.4_is300_pb.mwrep2  15.1.1_997s_lap2_pb.mwrep  (+38 more)
CwoeeGhosts/PresetCar/: 911TURBO_CUSTOM  COBALTSS_CUSTOM  GALLARDO_CUSTOM  GTI_KURU  MURCIELAGO_CUSTOM  PUNTO_CUSTOM  SUPRA_CUSTOM  SUPRA_CUSTOM_2  TT_CUSTOM
CwoeeGhosts/PresetCarVanilla/: BL10  BL11  BL12  BL13  BL14  BL15  BL2  BL3  BL4  BL5  BL6  BL7  BL8  BL9  BONUS_C6R  BONUS_GT2  BONUS_SL65  CASTROLGT  CE_997S  CE_C6R  CE_CAMARO  CE_CORVETTE  CE_ELISE  CE_GT2  CE_GTRSTREET  CE_SL500  CE_SL65  CE_SUPRA  COP_CROSS  CS_CAR_01  CS_CAR_02  CS_CAR_07  CS_CAR_08  CS_CAR_14  CS_CAR_16  CS_CAR_17  CS_CAR_19  CS_CAR_PIZZA  DDAYSUPRA  E3_DEMO_BMW  (+4 more)
hooks/: carrender.h  customevents.h  fixes.h
(+128 files in other folders)
